2006-01-27  9:37 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelSwap) extracted one complete loop of
	gridRemoveTwoFaceCell after other types of swapping to make sure
	that previous swapping passes did not create a new two face cell
	that was missed.

2006-01-25 16:40 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) to fix a subtle
	parallelization bug. Split problem projection edges in the interior
	of the parition while doing boundaries to allow projection and
	untangling to proceed.

2006-01-25 16:40 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerSplit) removed gridUntangle, call
	after cycle is complete.

2006-01-25 16:40 Mike Park  <mike.park@nasa.gov>

	* src/gridmpi.c (gridParallelAdapt) use_a_plan = TRUE as default.
	This affects "production" path in code.

2006-01-25 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridEdgeRatioRange) refactored to loop over cells.
	* src/gridmetric.c (gridEdgeRatioRangeInVolume) exclude surface.

2006-01-25  9:55 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridAddNodeWithGlobal) to avoid a zero map after
	reallocation, do not realloc grid->map if it is NULL.

2006-01-25  9:02 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridPhase1) allow negative cells and faces on
	edge node insert, but not on unused removal.

2006-01-25  9:02 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridedgerDiscretizeEvenly) to increase
	robustness, when gridedgerDiscretize NULL, try a nearby length to
	keep going.

2006-01-25  8:50 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridedgerDiscretize) to prevent seg fault,
	return NULL when ge->t freed due to gridedgerLengthToS failure.

2006-01-24 16:50 Mike Park  <mike.park@nasa.gov>

	* src/gridfacer.c (gridfacerInsert) Reuse a node instead of
	inserting if it is already in the right place.

2006-01-24 14:00 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridPhase2) call gridfacerCollapse.