@@ -81,6 +81,7 @@ Grid *gridOptimizeXYZ(Grid *g, int node, double *dxdydz );
 
 Grid *gridSmartLaplacian(Grid *g, int node );
 Grid *gridSmartVolumeLaplacian(Grid *g, int node );
+Grid *gridSmartAreaUVLaplacian(Grid *g, int node );
 
 Grid *gridStoreVolumeCostDerivatives(Grid *g, int node );
 Grid *gridStoreFaceCostParameterDerivatives(Grid *g, int node );
