@@ -1,3 +1,11 @@
+2006-01-27 11:05 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridmpi.c (gridSmoothNodeFaceAreaUV) added
+	gridSmartAreaUVLaplacian call and mulitple
+	gridSmoothNodeFaceAreaUVSimplex calls.
+	* src/gridmpi.c (gridSmartAreaUVLaplacian) new function to do
+	smart laplacian smooth of face uv area to untangle surface grid.
+
 2006-01-27  9:37 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridmpi.c (gridParallelSwap) extracted one complete loop of
